namespace SproomInbox.API.Data.Entities
{
    public enum DocumentType
    {
        Invoice,
        CreditNote
    }
}