namespace SproomInbox.API.Data.Entities
{
    public enum State
    {
        //Received, Approved, Rejected
        Received,
        Approved,
        Rejected
    }
}